--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </style>
 </head>
 <body>
- <iframe src="https://usuario.github.io/repo/sistemas.pdf" width="100%" height="600px"></iframe>
+<iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/usuario/repo/rama/sistemas.pdf&embedded=true"></iframe>
 <header>
     <h1>¿QUÉ ES EL ACOSO ESCOLAR Y POR QUÉ IMPORTA?</h1>
 </header>
