--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
 </style>
 </head>
 <body>
-<iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/usuario/repo/rama/sistemas.pdf&embedded=true"></iframe>
-<a href="archivo.pdf" download>Descargar PDF</a>
+<iframe src="https://raw.githubusercontent.com/usuario/repo/rama/sistemas.pdf"></iframe>
 <header>
     <h1>¿QUÉ ES EL ACOSO ESCOLAR Y POR QUÉ IMPORTA?</h1>
 </header>
