--- a/index.html
+++ b/index.html
@@ -136,7 +136,15 @@
 </style>
 </head>
 <body>
-<iframe src="https://raw.githubusercontent.com/usuario/repo/rama/sistemas.pdf"></iframe>
+<!-- Ejemplo de iframe configurado correctamente -->
+<iframe 
+  src="sistemas.pdf" 
+  width="100%" 
+  height="600px"
+  type="application/pdf"
+>
+  <p>Tu navegador no soporta PDFs. <a href="sistemas.pdf">Descargar PDF</a></p>
+</iframe>
 <header>
     <h1>¿QUÉ ES EL ACOSO ESCOLAR Y POR QUÉ IMPORTA?</h1>
 </header>
